--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hamburger-button": "^0.0.1",
     "react-locomotive-scroll": "^0.2.0",
     "react-parallax": "^3.3.0",
     "react-scripts": "5.0.0",
