--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hamburger-button": "^0.0.1",
     "react-locomotive-scroll": "^0.2.0",
     "react-parallax": "^3.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
